# pseudopaint

./: CMakeLists.txt  README.md
.qt/: QtDeploySupport.cmake
Pseudopaint/: CMakeLists.txt  canvas.cpp  canvas.h  mainwindow.cpp  mainwindow.h
build-Pseudopaint-Desktop-Debug/: CMakeCache.txt  Makefile  cmake_install.cmake  qtcsettings.cmake
build-Pseudopaint-Desktop-Debug/.cmake/api/v1/reply/: cache-v2-109c6c57fdfd97685044.json  cmakeFiles-v1-5a48d27a544da8bd93a8.json  codemodel-v2-a7e6d1fbdec5281e6a27.json  directory-.-Debug-9e8c15c033a370236a90.json  index-2023-10-03T15-45-03-0687.json  target-Pseudopaint-Debug-a05d1f27d9bad2e04853.json  target-Pseudopaint_autogen-Debug-3c22eb7b8048bee9f9ed.json
build-Pseudopaint-Desktop-Debug/.qt/: QtDeploySupport.cmake
src/: canvas.cpp  canvas.hpp  drawable.hpp  main.cpp  tool.cpp  tool.hpp
